[WFCORE-5782] Reset 'java.security.manager' default value back to "allow" by default in WildFly shell scripts